Correcoes exercicio extra

--- a/AtividadeExtra/index.html
+++ b/AtividadeExtra/index.html
@@ -51,7 +51,7 @@
         <article>
             <br>
             <h2>Anti-Herói</h2>
-            <img class="imagem" src="anti-heroi.jpg" alt="álbum lobos">
+            <img class="imagem" src="anti-heroi.jpg" alt="álbum anti-herói">
             <div class="lista">
                 <p>O segundo álbum do artista, com muitas faixas melancólicas e voltadas a tristeza. Seu elemento é o
                     <strong> ar </strong>.
@@ -75,7 +75,7 @@
         <article>
             <br>
             <h2>Pirata</h2>
-            <img class="imagem" src="pirata.webp" alt="álbum lobos">
+            <img class="imagem" src="pirata.webp" alt="álbum pirata">
             <div class="lista">
                 <p>O terceiro álbum do cantor, com faixas muito diversificadas entre si e com diversos temas. Seu
                     elemento é a <strong> água </strong>.</p>
@@ -99,7 +99,7 @@
         <article id="super">
             <br>
             <h2>Super</h2>
-            <img class="imagem" src="super.webp" alt="álbum lobos">
+            <img class="imagem" src="super.webp" alt="álbum super">
             <div class="lista">
                 <p>O quarto, e último até o momento, álbum do cantor, com o tema principal dizer o que o amor vira
                     quando chega o fim. Seu elemento é o <strong> fogo </strong>.</p>
