--- a/AtividadeExtra/index.html
+++ b/AtividadeExtra/index.html
@@ -30,7 +30,7 @@
             <h2>Lobos</h2>
             <img class="imagem" src="lobos.jpg" alt="álbum lobos">
             <div class="lista">
-                <p>O primeiro álbum de estúdio da carreira de Jão, vindo com uma grande variedade de estilos musicais.
+                <p>O primeiro álbum de estúdio da cargseira de Jão, vindo com uma grande variedade de estilos musicais.
                     Seu elemento é a <strong> terra</strong>.</p>
                 <p> As suas faixas são: </p>
                 <ol>
